[tool.poetry]
name = "ppo-psrp"
version = "0.0.1"
description = "First version"
authors = ["Roman <roma.bashirov.1@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
gym = "^0.26.2"
torch = "^2.5.1"
gymnasium = "^1.0.0"
tensorboard = "^2.18.0"
stable-baselines3 = {extras = ["extra"], version = "^2.4.0"}
torch-geometric = "^2.6.1"
sb3-contrib = "^2.4.0"
pip-licenses = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
